name:                hangman
version:             0.1.0.0
synopsis:            Simple Hangman game in Haskell
description:         Please see README.md
homepage:            https://github.com/trezona-lecomte/hangman-haskell
license:             MIT
license-file:        LICENSE
author:              Kieran Trezona-le Comte
maintainer:          trezona.lecomte@gmail.com
copyright:           2016 Kieran Trezona-le Comte
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010

executable hangman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hangman
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/trzona-lecomte/hangman-haskell
